fix: remove hack in scrollbar

--- a/assets/scss/core/_reset.scss
+++ b/assets/scss/core/_reset.scss
@@ -25,22 +25,6 @@ RESET DOPPLER STYLE GUIDES
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  margin: 5px;
-}
-
-::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-}
-
 html {
   line-height: 1.15;
   /* 1 */
